# questionaries

./: .gitignore  Cargo.toml  Rocket.toml  docker-compose.yml
migrations/: 20231130095821_initial_migration.sql
src/: lib.rs  main.rs  routes.rs
src/db/: mod.rs
src/forms/: create_answer.rs  create_questionary.rs  mod.rs
src/models/: answer.rs  mod.rs  questionary.rs  questions.rs  user_answer.rs
src/routes/: create_questionary.rs  delete_questionary.rs  get_question.rs  index.rs  list_questionaries.rs  mod.rs  questionary_statistics.rs  static_mod.rs  submit_questionary.rs  update_questionary.rs
static/css/: style.css
templates/: base.html.tera  get_questionary.html.tera  index.html.tera  list_questionaries.html.tera  questionary_statistics.html.tera  ty_page.html.tera
