[package]
name = "questions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls" ] }
dotenvy = "0.15"
sqlx-cli = "0.7.3"
